[workspace]
resolver = "2"
members = ['mini-redis']

[workspace.dependencies]

[profile.release]
lto = true
strip = true

[package]
name = "miniredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1.34"
clap = { version = "4.2.7", features = ["derive"] }
mini-redis = { path="mini-redis" }