[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2.0.0"
bytes = "1"
tokio = "1.36.0"
tracing = "0.1.40"
clap = { version = "4.5.3", features = ["derive"] }
tokio-stream = "0.1.15"
async-stream = "0.3.5"
async-trait = "0.1.79"