[package]
name = "miniredis-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1.34"
tracing-subscriber = "0.3"
clap = { version = "4.2.7", features = ["derive"] }
tokio-stream = "0.1"
mini-redis = { path = "../mini-redis" }
log = "0.4.21"
